# GWNUanalysis

./: .gitignore  CMakeLists.txt  README.md
exec/: readFile.cxx
include/: Cluster.h  DataFileReader.h  DetectorCalibration.h  DetectorDescription.h  DetectorGeometry.h  EventReadout.h  Globals.h  Hit.h  Strip.h  StripCalibration.h  TDCConfigReader.h  TDCReadout.h  Trigger.h
src/: Cluster.cpp  DataFileReader.cpp  DetectorCalibration.cpp  DetectorDescription.cpp  DetectorGeometry.cpp  EventReadout.cpp  Strip.cpp  StripCalibration.cpp  TDCConfigReader.cpp
